<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >BluetoothControl</string>
    <string name="title_device_list">Device List</string>
    <string name="action_settings" >Settings</string>
    <string name="toast_bluetooth_nav">Bluetooth is not available.</string>
    <string name="toast_bluetooth_ne">Bluetooth is not enabled.</string>
    <string name="toast_bluetooth_nd">Bluetooth failed to find device.</string>
    <string name="toast_bluetooth_connecting">Connecting to device.</string>
    <string name="toast_bluetooth_connected">Connected to device.</string>
    <string name="toast_bluetooth_disconnect">Disconnect device.</string>
    <string name="toast_bluetooth_connect_fail">Failed to connect.</string>
    <string name="toast_bluetooth_connect_lost">Lost connection.</string>
    <string name="toast_bluetooth_timeout">Timeout!</string>
    <string name="toast_bluetooth_data_invalid">Data invalid!</string>
    <string name="toast_bluetooth_cal_start_fail">Calibration start failed</string>
    <string name="toast_bluetooth_cal_start">Calibration started</string>
    <string name="toast_bluetooth_cal_stop_fail">Calibration stop failed</string>
    <string name="toast_bluetooth_cal_stop">Calibration completed</string>

    <string name="text_status_paired">Bluetooth device is paired</string>
    <string name="text_status_connecting">Connecting</string>
    <string name="text_status_connected">Connected</string>
    <string name="text_no_divice">No device found</string>

    <string name="button_enable_bluetooth">Enable Bluetooth</string>
    <string name="button_scan_bluetooth">Scan Devices</string>
    <string name="button_connect_bluetooth">Connect</string>
    <string name="button_disconnect_bluetooth">Disconnect</string>
    <string name="button_calibrate">Calibrate</string>
    <string name="button_monitor">Monitor</string>
    <string name="button_stop_monitor">Stop Monitor</string>
    <string name="button_stop_calibrate">Stop Cal.</string>

    <string name="setting_url">URL</string>
    <string name="setting_radius">Radius</string>
    <string name="setting_angle">Angle</string>
    <string name="setting_refreshing_interval">Refreshing interval</string>

    <string name="default_value_url">ppk001.sinaapp.com</string>
    <string name="default_value_radius">50.0</string>
    <string name="default_value_angle">60.0</string>
    <string name="default_value_refreshing_interval">5</string>

    <string name="key_url">url</string>
    <string name="key_radius">Radius</string>
    <string name="key_angle">Angle</string>
    <string name="key_refreshing_interval">RefresingInterval</string>

</resources>
