<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_enable_bluetooth"
            android:id="@+id/button_enable_bluetooth"
            android:layout_marginTop="15dp"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_scan_bluetooth"
            android:id="@+id/button_scan_devices"
            android:layout_below="@+id/button_enable_bluetooth"
            android:layout_centerHorizontal="true"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_connect_bluetooth"
            android:id="@+id/button_connect"
            android:layout_below="@+id/button_scan_devices"
            android:layout_centerHorizontal="true"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_connect"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_calibrate"
                android:id="@+id/button_calibrate"
                android:layout_gravity="center_horizontal|top"
                android:layout_weight="1"
                android:enabled="true"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_monitor"
                android:id="@+id/button_monitor"
                android:layout_gravity="center_horizontal|top"
                android:layout_weight="1"/>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="NaN"
            android:id="@+id/textView_result"
            android:layout_marginTop="34dp"
            android:textColor="#ff0300"
            android:textSize="100dp"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"/>

</RelativeLayout>
